--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#1d1d1d" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <title>Access Restricted</title>
+  <title>>Attention Required!</title>
   <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/monsara/email-assets/refs/heads/main/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="512x512" href="https://raw.githubusercontent.com/monsara/email-assets/refs/heads/main/images/android-chrome-512x512.png">
   <link rel="icon" type="image/png" sizes="192x192" href="https://raw.githubusercontent.com/monsara/email-assets/refs/heads/main/images/android-chrome-192x192.png">
@@ -212,12 +212,13 @@
           <path fill-rule="evenodd" clip-rule="evenodd" d="M6.69258 4.14551H20.6123C22.8495 4.14551 23.7505 4.98781 23.3215 6.66603C23.2418 6.98509 23.1192 7.32328 22.9476 7.68062L21.3478 11.1519C20.269 13.5065 18.3996 14.687 15.7456 14.687H9.1627L11.3325 9.99695H15.7333L16.5179 8.29321H10.2642L6.68608 16.0592H10.5169L0.182861 23.9717L3.75626 16.2953H1.15742L5.02503 7.74463H5.03143L6.69258 4.14551Z" fill="#A5D300" />
         </svg>
       </div>
-      <h1>Access restricted</h1>
-      <p>The project is not available in your country due to legal reasons.</p>
-      <p>Is your region not restricted?<br>
-        If you're using a proxy service or VPN, try turning it off and refreshing the page.</p>
-      <p>If you have any questions or cooperation suggestions, feel free to contact us at:</p>
-      <a href="mailto:support@prematch.com.ua">support@prematch.com.ua</a>
+      <h1>403 Forbidden</h1>
+      <p>You do not have permission to view this website.</p>
+      <p>If you believe this to be an error, please open a
+        <a href="mailto:support@prematch.com.ua?subject=Forbidden Access | Ray ID:::RAY_ID::&body=Describe issue here...">support@prematch.com.ua</a>
+      </p>
+      <p>Ray ID: ::RAY_ID::</p>
+      <p>Client IP: ::CLIENT_IP::</p>
     </div>
 
     <div class="image-wrapper">
